plugins {
	id 'eclipse'
	id 'idea'
	id 'net.minecraftforge.gradle' version '6.+'
	id 'org.spongepowered.mixin' version '0.7.+'
	id 'org.parchmentmc.librarian.forgegradle' version '1.+'
}

version = '1.29'
group = 'bl4ckscor3.mod.ceilingtorch'
archivesBaseName = 'ceilingtorch-1.19.4'

java.toolchain.languageVersion = JavaLanguageVersion.of(17)
println('Java: ' + System.getProperty('java.version') + ' JVM: ' + System.getProperty('java.vm.version') + '(' + System.getProperty('java.vendor') + ') Arch: ' + System.getProperty('os.arch'))

minecraft {
    mappings channel: 'parchment', version: '2023.06.26-1.19.4'
    accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg')
	
    runs {
        client {
            workingDirectory project.file('run/client')
            property 'forge.logging.console.level', 'debug'

            mods {
                ceilingtorch {
                    source sourceSets.main
                }
            }
        }

        server {
            workingDirectory project.file('run/server')
            property 'forge.logging.console.level', 'debug'
			args '-nogui'

            mods {
                ceilingtorch {
                    source sourceSets.main
                }
            }
        }
    }
}

repositories {
    maven {
        url "https://www.cursemaven.com"
        content {
            includeGroup "curse.maven"
        }
    }
}

dependencies {
    minecraft 'net.minecraftforge:forge:1.19.4-45.1.0'
	runtimeOnly fg.deobf("curse.maven:jei-238222:4712556")

    implementation fg.deobf("curse.maven:additional-lights-384991:4486637")
    implementation fg.deobf("curse.maven:adorn-for-forge-438784:4568554")
    implementation fg.deobf("curse.maven:aquatic-torches-563637:4468635")
    implementation fg.deobf("curse.maven:architectury-api-419699:4633041") //bamboo everything dependency
    implementation fg.deobf("curse.maven:bamboo-everything-331723:4512186")
    implementation fg.deobf("curse.maven:common-capabilities-247007:4517677") //integrated dynamics dependency
    implementation fg.deobf("curse.maven:curios-309927:4523020") //occultism dependency
    implementation fg.deobf("curse.maven:cyclops-core-232758:4578164") //integrated dynamics dependency
    implementation fg.deobf("curse.maven:gaia-dimension-302529:4602609")
    implementation fg.deobf("curse.maven:geckolib-388172:4568326") //occultism dependency
    implementation fg.deobf("curse.maven:integrated-dynamics-236307:4566168")
    implementation fg.deobf("curse.maven:kotlin-for-forge-351264:4630525") //adorn dependency
    implementation fg.deobf("curse.maven:magical-torches-389917:4700110")
    implementation fg.deobf("curse.maven:mo-shiz-mod-62536:4520207")
    implementation fg.deobf("curse.maven:modonomicon-538392:4641902") //occultism dependency
    implementation fg.deobf("curse.maven:occultism-361026:4641928")
    implementation fg.deobf("curse.maven:sbm-bone-torch-238695:5313148")
    implementation fg.deobf("curse.maven:silent-gear-297039:4576936")
    implementation fg.deobf("curse.maven:silent-lib-242998:4540305") //silent gear and torch bandolier dependency
    implementation fg.deobf("curse.maven:smartbrainlib-661293:4455931") //occultism dependency
    implementation fg.deobf("curse.maven:tofucraftreload-317469:4547535")
    implementation fg.deobf("curse.maven:the-undergarden-379849:4544001")
    implementation fg.deobf("curse.maven:torch-bandolier-299337:4557757")
    implementation fg.deobf("curse.maven:torchmaster-254268:4661446")
}

jar {
    manifest {
        attributes(["Specification-Title": "Ceiling Torch",
                    "Specification-Vendor": "bl4ckscor3",
                    "Specification-Version": "${version}",
                    "Implementation-Title": "Ceiling Torch",
                    "Implementation-Version": "${version}",
                    "Implementation-Vendor" :"bl4ckscor3",
                    "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")],)
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
    options.release = 17
}